tests/transpiler/x/java/map_index.error
exit status 1
Main.java:5: error: incompatible types: String cannot be converted to int
        System.out.println(m["b"]);
                             ^
Main.java:5: error: array required, but Map<String,Integer> found
        System.out.println(m["b"]);
                            ^
2 errors
